Fixed z-index on heading, hero for green box's sake

--- a/css/background.css
+++ b/css/background.css
@@ -7,6 +7,7 @@
   justify-content: flex-end;
   padding-right: 10%;
   overflow: hidden;
+  z-index: -20;
 }
 
 .background img {
@@ -24,6 +25,7 @@
   transform: rotate(45deg);
   position: absolute;
   top: 100vh;
-  z-index: 1;
+  z-index: -1;
   right: -25rem;
+  mix-blend-mode: difference;
 }
