--- a/css/hero.css
+++ b/css/hero.css
@@ -7,13 +7,13 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  z-index: -3;
 }
 
 .hero-image-wrapper {
   width: 100%;
   height: 100vh;
   position: relative;
+  z-index: -2;
 }
 
 .hero img,
