--- a/css/unlock.css
+++ b/css/unlock.css
@@ -1,14 +1,13 @@
-section.unlock  {
+section.unlock {
   width: 100%;
   height: 53rem;
   overflow: hidden;
   padding: 4rem 0;
-  z-index: 2;
 }
 
 .section-title {
-  margin-bottom: -4rem;
-  z-index: 999;
+  margin-bottom: -10rem;
+  z-index: 5;
 }
 
 .unlock-image-wrapper {
@@ -16,7 +15,7 @@ section.unlock  {
   height: 100%;
   overflow: hidden;
   position: relative;
-  z-index: 999;
+  z-index: -1;
 }
 
 .overlay {
